--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "express": "^4.15.5",
     "jade": "~1.11.0",
     "mongoose": "^5.0.3",
+    "mongoose-bcrypt": "^1.5.0",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
