--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
+    "randomstring": "^1.1.5",
     "serve-favicon": "^2.4.5"
   }
 }
