--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "debug": "^2.6.9",
     "express": "^4.15.5",
     "express-jwt": "^5.3.0",
+    "express-unless": "^0.5.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.3",
